// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Notification > Basic Rendering > matches empty notification snapshot 1`] = `
<div>
  <div
    class="absolute right-0 mt-2 w-72 bg-white border border-slate-200 rounded-lg shadow-lg z-20"
  >
    <div
      class="p-4 border-b border-slate-100 font-semibold text-slate-700"
    >
      Notifications
    </div>
    <ul
      class="max-h-60 overflow-y-auto"
    />
  </div>
</div>
`;

exports[`Notification > Basic Rendering > matches long message notification snapshot 1`] = `
<div>
  <div
    class="absolute right-0 mt-2 w-72 bg-white border border-slate-200 rounded-lg shadow-lg z-20"
  >
    <div
      class="p-4 border-b border-slate-100 font-semibold text-slate-700"
    >
      Notifications
    </div>
    <ul
      class="max-h-60 overflow-y-auto"
    >
      <li
        class="px-4 py-2 hover:bg-slate-50 text-slate-700 flex justify-between"
      >
        <span>
          This is a very long notification message that should wrap properly and display correctly in the notification component
        </span>
        <span
          class="text-xs text-slate-400 ml-2"
        >
          1 min ago
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Notification > Basic Rendering > matches notification component snapshot 1`] = `
<div>
  <div
    class="absolute right-0 mt-2 w-72 bg-white border border-slate-200 rounded-lg shadow-lg z-20"
  >
    <div
      class="p-4 border-b border-slate-100 font-semibold text-slate-700"
    >
      Notifications
    </div>
    <ul
      class="max-h-60 overflow-y-auto"
    >
      <li
        class="px-4 py-2 hover:bg-slate-50 text-slate-700 flex justify-between"
      >
        <span>
          New job posted
        </span>
        <span
          class="text-xs text-slate-400 ml-2"
        >
          2 min ago
        </span>
      </li>
      <li
        class="px-4 py-2 hover:bg-slate-50 text-slate-700 flex justify-between"
      >
        <span>
          Application submitted
        </span>
        <span
          class="text-xs text-slate-400 ml-2"
        >
          5 min ago
        </span>
      </li>
      <li
        class="px-4 py-2 hover:bg-slate-50 text-slate-700 flex justify-between"
      >
        <span>
          Interview scheduled
        </span>
        <span
          class="text-xs text-slate-400 ml-2"
        >
          1 hour ago
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Notification > Basic Rendering > matches single notification snapshot 1`] = `
<div>
  <div
    class="absolute right-0 mt-2 w-72 bg-white border border-slate-200 rounded-lg shadow-lg z-20"
  >
    <div
      class="p-4 border-b border-slate-100 font-semibold text-slate-700"
    >
      Notifications
    </div>
    <ul
      class="max-h-60 overflow-y-auto"
    >
      <li
        class="px-4 py-2 hover:bg-slate-50 text-slate-700 flex justify-between"
      >
        <span>
          Single notification
        </span>
        <span
          class="text-xs text-slate-400 ml-2"
        >
          1 min ago
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Notification > Basic Rendering > matches special characters notification snapshot 1`] = `
<div>
  <div
    class="absolute right-0 mt-2 w-72 bg-white border border-slate-200 rounded-lg shadow-lg z-20"
  >
    <div
      class="p-4 border-b border-slate-100 font-semibold text-slate-700"
    >
      Notifications
    </div>
    <ul
      class="max-h-60 overflow-y-auto"
    >
      <li
        class="px-4 py-2 hover:bg-slate-50 text-slate-700 flex justify-between"
      >
        <span>
          Notification with special chars: @#$%^&*()
        </span>
        <span
          class="text-xs text-slate-400 ml-2"
        >
          1 min ago
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Notification > Basic Rendering > matches unicode notification snapshot 1`] = `
<div>
  <div
    class="absolute right-0 mt-2 w-72 bg-white border border-slate-200 rounded-lg shadow-lg z-20"
  >
    <div
      class="p-4 border-b border-slate-100 font-semibold text-slate-700"
    >
      Notifications
    </div>
    <ul
      class="max-h-60 overflow-y-auto"
    >
      <li
        class="px-4 py-2 hover:bg-slate-50 text-slate-700 flex justify-between"
      >
        <span>
          Notification with unicode: José María Ñoño
        </span>
        <span
          class="text-xs text-slate-400 ml-2"
        >
          1 min ago
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Notification > Edge Cases > matches HTML-like content notification snapshot 1`] = `
<div>
  <div
    class="absolute right-0 mt-2 w-72 bg-white border border-slate-200 rounded-lg shadow-lg z-20"
  >
    <div
      class="p-4 border-b border-slate-100 font-semibold text-slate-700"
    >
      Notifications
    </div>
    <ul
      class="max-h-60 overflow-y-auto"
    >
      <li
        class="px-4 py-2 hover:bg-slate-50 text-slate-700 flex justify-between"
      >
        <span>
          Message with &lt;script&gt;alert("test")&lt;/script&gt; content
        </span>
        <span
          class="text-xs text-slate-400 ml-2"
        >
          1 min ago
        </span>
      </li>
      <li
        class="px-4 py-2 hover:bg-slate-50 text-slate-700 flex justify-between"
      >
        <span>
          Message with &lt;div&gt;div&lt;/div&gt; content
        </span>
        <span
          class="text-xs text-slate-400 ml-2"
        >
          2 min ago
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Notification > Edge Cases > matches notifications with empty messages snapshot 1`] = `
<div>
  <div
    class="absolute right-0 mt-2 w-72 bg-white border border-slate-200 rounded-lg shadow-lg z-20"
  >
    <div
      class="p-4 border-b border-slate-100 font-semibold text-slate-700"
    >
      Notifications
    </div>
    <ul
      class="max-h-60 overflow-y-auto"
    >
      <li
        class="px-4 py-2 hover:bg-slate-50 text-slate-700 flex justify-between"
      >
        <span />
        <span
          class="text-xs text-slate-400 ml-2"
        >
          1 min ago
        </span>
      </li>
      <li
        class="px-4 py-2 hover:bg-slate-50 text-slate-700 flex justify-between"
      >
        <span>
          Valid message
        </span>
        <span
          class="text-xs text-slate-400 ml-2"
        >
          2 min ago
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Notification > Edge Cases > matches notifications with empty times snapshot 1`] = `
<div>
  <div
    class="absolute right-0 mt-2 w-72 bg-white border border-slate-200 rounded-lg shadow-lg z-20"
  >
    <div
      class="p-4 border-b border-slate-100 font-semibold text-slate-700"
    >
      Notifications
    </div>
    <ul
      class="max-h-60 overflow-y-auto"
    >
      <li
        class="px-4 py-2 hover:bg-slate-50 text-slate-700 flex justify-between"
      >
        <span>
          Test message
        </span>
        <span
          class="text-xs text-slate-400 ml-2"
        />
      </li>
      <li
        class="px-4 py-2 hover:bg-slate-50 text-slate-700 flex justify-between"
      >
        <span>
          Another message
        </span>
        <span
          class="text-xs text-slate-400 ml-2"
        >
          1 min ago
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Notification > Edge Cases > matches notifications with long time strings snapshot 1`] = `
<div>
  <div
    class="absolute right-0 mt-2 w-72 bg-white border border-slate-200 rounded-lg shadow-lg z-20"
  >
    <div
      class="p-4 border-b border-slate-100 font-semibold text-slate-700"
    >
      Notifications
    </div>
    <ul
      class="max-h-60 overflow-y-auto"
    >
      <li
        class="px-4 py-2 hover:bg-slate-50 text-slate-700 flex justify-between"
      >
        <span>
          Test message
        </span>
        <span
          class="text-xs text-slate-400 ml-2"
        >
          This is a very long time string that should display properly
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Notification > Edge Cases > matches notifications with numbers snapshot 1`] = `
<div>
  <div
    class="absolute right-0 mt-2 w-72 bg-white border border-slate-200 rounded-lg shadow-lg z-20"
  >
    <div
      class="p-4 border-b border-slate-100 font-semibold text-slate-700"
    >
      Notifications
    </div>
    <ul
      class="max-h-60 overflow-y-auto"
    >
      <li
        class="px-4 py-2 hover:bg-slate-50 text-slate-700 flex justify-between"
      >
        <span>
          Job #12345 has been posted
        </span>
        <span
          class="text-xs text-slate-400 ml-2"
        >
          1 min ago
        </span>
      </li>
      <li
        class="px-4 py-2 hover:bg-slate-50 text-slate-700 flex justify-between"
      >
        <span>
          You have 5 new applications
        </span>
        <span
          class="text-xs text-slate-400 ml-2"
        >
          2 min ago
        </span>
      </li>
    </ul>
  </div>
</div>
`;
